--- a/themes/next/source/css/_schemes/Pisces/_layout.styl
+++ b/themes/next/source/css/_schemes/Pisces/_layout.styl
@@ -17,7 +17,7 @@
   overflow: hidden;
   padding: 0;
   width: 240px;
-  background: white;
+  background: rgba(255,255,255,0.7);
   box-shadow: $box-shadow-inner;
   border-radius: $border-radius-inner;
 
@@ -62,7 +62,7 @@
   box-sizing: border-box;
   padding: $content-desktop-padding;
   width: $content-desktop;
-  background: white;
+  background: rgba(255,255,255,0.7);
   min-height: 700px;
   box-shadow: $box-shadow-inner;
   border-radius: $border-radius-inner;
@@ -85,7 +85,7 @@
   float: left;
   margin-top: 300px;
   width: $sidebar-desktop;
-  background: $body-bg-color;
+  background: transparent;
   box-shadow: none;
 
   +tablet() {
